--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev:client": "vite",
-    "dev:service": "node ./src/service/index.cjs",
+    "dev:service": "node ./src/service/index.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
