--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.25.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "react": "^19.1.0",
